# tap-amplitude

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml
tap_amplitude/: __init__.py  client.py  streams.py  tap.py
tests/: test_client.py  test_streams.py  test_tap.py
