[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graet-tap-amplitude"
version = "0.1.0"
description = "Singer tap for Amplitude, built with the Meltano Singer SDK"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "singer-sdk>=0.36.0,<1",
    "requests>=2.31.0",
    "pendulum>=2.1.2,<4",
]

[project.scripts]
tap-amplitude = "tap_amplitude.tap:TapAmplitude.cli"

[project.optional-dependencies]
testing = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tap_amplitude*"]
